# Compilador-Bminor

./: .gitignore  CMakeLists.txt  Compilador.cpp  README.md  astTree.csv  astTree.txt  errorDetection.h  grammar copy.txt  grammar.txt  grammarArrow.txt  input.bmm  input2.bmm  input3.bmm  input4.bmm  input5.bmm  input6.bmm  parseTree.csv  parseTree.txt  requirements.txt  scanner.cpp  scanner2.cpp  tree.ipynb
